--- a/style.css
+++ b/style.css
@@ -15,11 +15,12 @@ body{
 }
 .container{
     background-color:rgb(190, 217, 221);
-    min-width: 50vw;
+    width: 50vw;
     min-height: 50vh;
     border-radius: 5px;
     padding:30px;
     text-align: center;
+    max-width:600px;
     
 
 }
@@ -28,7 +29,7 @@ body{
     width:100%;
     margin-top:20px;
     margin-bottom:10px;
-    height:30px;
+    height:40px;
     padding-left:5px;
     border:1px solid teal;
     border-radius:10px;
@@ -59,6 +60,8 @@ body{
 
 .pFonts{
     font-size:14px;
+    word-wrap:break-word;
+    width:100%;
 }
 
 /* added media query  */
